logs/dag_id=titanic_pivot/run_id=manual__2023-12-25T20:52:15.537634+00:00/task_id=pivot_dataset/attempt=2.log
[2023-12-25 20:53:24,603] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: titanic_pivot.pivot_dataset manual__2023-12-25T20:52:15.537634+00:00 [queued]>
[2023-12-25 20:53:24,611] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: titanic_pivot.pivot_dataset manual__2023-12-25T20:52:15.537634+00:00 [queued]>
[2023-12-25 20:53:24,612] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2023-12-25 20:53:24,612] {taskinstance.py:1357} INFO - Starting attempt 2 of 2
[2023-12-25 20:53:24,612] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2023-12-25 20:53:24,623] {taskinstance.py:1377} INFO - Executing <Task(PythonOperator): pivot_dataset> on 2023-12-25 20:52:15.537634+00:00
[2023-12-25 20:53:24,628] {standard_task_runner.py:52} INFO - Started process 39803 to run task
[2023-12-25 20:53:24,633] {standard_task_runner.py:79} INFO - Running: ['airflow', 'tasks', 'run', 'titanic_pivot', 'pivot_dataset', 'manual__2023-12-25T20:52:15.537634+00:00', '--job-id', '17', '--raw', '--subdir', 'DAGS_FOLDER/titanic_dag.py', '--cfg-path', '/tmp/tmpbjqkrybf', '--error-file', '/tmp/tmpiyfox_8d']
[2023-12-25 20:53:24,634] {standard_task_runner.py:80} INFO - Job 17: Subtask pivot_dataset
[2023-12-25 20:53:24,702] {task_command.py:369} INFO - Running <TaskInstance: titanic_pivot.pivot_dataset manual__2023-12-25T20:52:15.537634+00:00 [running]> on host c975c50309df
[2023-12-25 20:53:24,785] {taskinstance.py:1569} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=airflow
AIRFLOW_CTX_DAG_ID=titanic_pivot
AIRFLOW_CTX_TASK_ID=pivot_dataset
AIRFLOW_CTX_EXECUTION_DATE=2023-12-25T20:52:15.537634+00:00
AIRFLOW_CTX_TRY_NUMBER=2
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-12-25T20:52:15.537634+00:00
[2023-12-25 20:53:24,804] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/usr/local/lib/python3.8/dist-packages/sqlalchemy/engine/base.py", line 1705, in _execute_context
    self.dialect.do_execute(
  File "/usr/local/lib/python3.8/dist-packages/sqlalchemy/engine/default.py", line 716, in do_execute
    cursor.execute(statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near "default"
LINE 1: select * from default.titanic
                      ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/usr/local/lib/python3.8/dist-packages/airflow/operators/python.py", line 171, in execute
    return_value = self.execute_callable()
  File "/usr/local/lib/python3.8/dist-packages/airflow/operators/python.py", line 189, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/lessons/dags/titanic_dag.py", line 28, in pivot_dataset
    titanic_df = pd.read_sql('select * from default.titanic', con=engine)
  File "/usr/local/lib/python3.8/dist-packages/pandas/io/sql.py", line 592, in read_sql
    return pandas_sql.read_query(
  File "/usr/local/lib/python3.8/dist-packages/pandas/io/sql.py", line 1557, in read_query
    result = self.execute(*args)
  File "/usr/local/lib/python3.8/dist-packages/pandas/io/sql.py", line 1402, in execute
    return self.connectable.execution_options().execute(*args, **kwargs)
  File "<string>", line 2, in execute
  File "/usr/local/lib/python3.8/dist-packages/sqlalchemy/util/deprecations.py", line 390, in warned
    return fn(*args, **kwargs)
  File "/usr/local/lib/python3.8/dist-packages/sqlalchemy/engine/base.py", line 3037, in execute
    return connection.execute(statement, *multiparams, **params)
  File "/usr/local/lib/python3.8/dist-packages/sqlalchemy/engine/base.py", line 1185, in execute
    return self._exec_driver_sql(
  File "/usr/local/lib/python3.8/dist-packages/sqlalchemy/engine/base.py", line 1484, in _exec_driver_sql
    ret = self._execute_context(
  File "/usr/local/lib/python3.8/dist-packages/sqlalchemy/engine/base.py", line 1748, in _execute_context
    self._handle_dbapi_exception(
  File "/usr/local/lib/python3.8/dist-packages/sqlalchemy/engine/base.py", line 1929, in _handle_dbapi_exception
    util.raise_(
  File "/usr/local/lib/python3.8/dist-packages/sqlalchemy/util/compat.py", line 211, in raise_
    raise exception
  File "/usr/local/lib/python3.8/dist-packages/sqlalchemy/engine/base.py", line 1705, in _execute_context
    self.dialect.do_execute(
  File "/usr/local/lib/python3.8/dist-packages/sqlalchemy/engine/default.py", line 716, in do_execute
    cursor.execute(statement, parameters)
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) syntax error at or near "default"
LINE 1: select * from default.titanic
                      ^

[SQL: select * from default.titanic]
(Background on this error at: http://sqlalche.me/e/14/f405)
[2023-12-25 20:53:24,822] {taskinstance.py:1395} INFO - Marking task as FAILED. dag_id=titanic_pivot, task_id=pivot_dataset, execution_date=20231225T205215, start_date=20231225T205324, end_date=20231225T205324
[2023-12-25 20:53:24,833] {standard_task_runner.py:92} ERROR - Failed to execute job 17 for task pivot_dataset ((psycopg2.errors.SyntaxError) syntax error at or near "default"
LINE 1: select * from default.titanic
                      ^

[SQL: select * from default.titanic]
(Background on this error at: http://sqlalche.me/e/14/f405); 39803)
[2023-12-25 20:53:24,845] {local_task_job.py:156} INFO - Task exited with return code 1
[2023-12-25 20:53:24,887] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
